edited contact section so that the background scrolls on smaller screens and stays fixed on larger ones

--- a/src/styles/mixins/_backgrounds.scss
+++ b/src/styles/mixins/_backgrounds.scss
@@ -1,6 +1,6 @@
 @mixin fixed-background-overlay(
   $image: "~Assets/abstract_background.png",
-  $opacity: 0.02
+  $opacity: 0.03
 ) {
   &:before {
     content: " ";
